# A

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: A.hpp  Ability.hpp  Config.hpp  Constants.hpp  KeyboardControlAbility.hpp  Logger.hpp  MouseControlAbility.hpp  OSInfoAbility.hpp  ScreenshotAbility.hpp  SystemMonitorAbility.hpp  Window.hpp  WindowManagerAbility.hpp
src/: A.cpp  Config.cpp  KeyboardControlAbility.cpp  Logger.cpp  MouseControlAbility.cpp  OSInfoAbility.cpp  ScreenshotAbility.cpp  SystemMonitorAbility.cpp  Window.cpp  WindowManagerAbility.cpp
